--- a/css/1_member-login.css
+++ b/css/1_member-login.css
@@ -163,14 +163,6 @@ body {
   width: 80px;
 }
 
-.x-btn {
-  width: 1rem;
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  cursor: pointer;
-}
-
 .login-title {
   text-align: center;
   font-size: 1.2rem;
@@ -202,6 +194,13 @@ body {
 
 label p {
   font-weight: 700;
+}
+
+.alert-danger {
+  color: rgb(216, 44, 44);
+  font-weight: 600;
+  border: 3px solid rgb(36, 24, 146);
+  background-color: rgb(243, 216, 61);
 }
 
 /* .input-wrap {
