--- a/css/3_B2B-Create-Event.css
+++ b/css/3_B2B-Create-Event.css
@@ -150,12 +150,24 @@ input:focus {
   color: #bcbcbc;
 }
 
+.modify2:hover {
+  background-color: #0f5966;
+  border: 3px solid black;
+  color: #818181;
+}
+
 .modify2 {
   width: 140px;
   height: 50px;
   background-color: #168fa4;
   border: 3px solid #000;
   border-radius: 0;
+}
+
+.modify1:hover {
+  background-color: #3a3939;
+  border: 3px solid black;
+  color: black;
 }
 
 input::-webkit-outer-spin-button,
