--- a/css/5_shopCart-member-info.css
+++ b/css/5_shopCart-member-info.css
@@ -133,7 +133,12 @@ form .btn {
 
 /* ====== Ｍedia Query =============== */
 /* Extra small 超小 (576px 以下) */
-@media screen and (max-width: 576px) {}
+@media screen and (max-width: 576px) {
+
+    #total {
+        display: none;
+    }
+}
 
 /* =============================== */
 /* Small 小型裝置sm (576px 以上) */
