--- a/css/3_B2B-index.css
+++ b/css/3_B2B-index.css
@@ -10,6 +10,11 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+button {
+  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
 .background {
   width: 100%;
   height: 750px;
@@ -109,6 +114,11 @@ body {
   border: 3px solid #000;
   border-radius: 0;
   padding: 0;
+}
+
+.modify:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
 }
 
 .picture {
