--- a/css/3_B2B-sign-in-edit-file.css
+++ b/css/3_B2B-sign-in-edit-file.css
@@ -218,12 +218,22 @@ textarea {
   border-radius: 0;
 }
 
+.modify1:hover {
+  background-color: #a3291b;
+  border: 3px solid #000;
+}
+
 .modify2 {
   width: 140px;
   height: 50px;
   background-color: #168fa4;
   border: 3px solid #000;
   border-radius: 0;
+}
+
+.modify2:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
 }
 
 button:disabled {
