--- a/css/3_B2B-ticket-list-cancel.css
+++ b/css/3_B2B-ticket-list-cancel.css
@@ -134,6 +134,26 @@ table {
   padding: 0;
 }
 
+.modify:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
+}
+
+.modify2:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
+}
+
+.modify3:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
+}
+
+.modify4:hover {
+  background-color: #a3291b;
+  border: 3px solid #000;
+}
+
 /* 提醒小卡css */
 .modal-content {
   border-radius: 0px;
