--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 button:focus {
   box-shadow: none !important;
 }
@@ -122,6 +122,25 @@ table {
   background-color: #168fa4;
   border: 3px solid #000;
   border-radius: 0;
+}
+.modify:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
+}
+
+.modify2:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
+}
+
+.modify3:hover {
+  background-color: #005d6d;
+  border: 3px solid #000;
+}
+
+.modify4:hover {
+  background-color: #a3291b;
+  border: 3px solid #000;
 }
 
 .modify4 {
