--- a/css/3_B2B-event-manage.css
+++ b/css/3_B2B-event-manage.css
@@ -118,6 +118,9 @@ table {
 .modify3 {
   width: 100px;
   height: 50px;
+  background-color: #168fa4;
+  border: 3px solid #000;
+  border-radius: 0;
 }
 
 .modify4 {
