TOP10 熱門藝文展覽 carousel

--- a/css/4_productList.css
+++ b/css/4_productList.css
@@ -754,3 +754,10 @@ footer .letter-submit {
     opacity: 0;
   }
 }
+
+.carousel-wrapper{
+  width: 100%;
+  position: relative;
+  left:0;
+  transition: .5s;
+}
