--- a/css/0_blog_article.css
+++ b/css/0_blog_article.css
@@ -40,6 +40,18 @@ body {
 }
 
 /* ----------hero article---------- */
+.bread-crumb a{
+  color: #000000;
+  font-size: 0.8rem;
+  font-weight: 500;
+  line-height: 1rem;
+}
+
+.bread-crumb img{
+  width: 20px;
+  margin-right: 10px;
+}
+
 .feature-img img {
   width: 100%;
   margin: 0 auto;
