--- a/css/0_blog_article.css
+++ b/css/0_blog_article.css
@@ -40,6 +40,11 @@ body {
 }
 
 /* ----------hero article---------- */
+.row{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .bread-crumb a{
   color: #000000;
   font-size: 0.8rem;
