--- a/css/4_product-detail.css
+++ b/css/4_product-detail.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
 html,
 body {
@@ -16,7 +16,7 @@ body {
   background-position: 32px 0px, 84px 56px;
   background-size: 100px 100px;
   background-attachment: fixed; */
-  
+
   font-family: "Noto Sans TC", sans-serif;
   font-family: "Roboto", sans-serif;
 }
@@ -117,12 +117,48 @@ body {
   background-color: #fac000;
   border: 3px solid black;
   text-align: center;
-  margin-top: 15%;
-  margin-left: 20%;
-  transition: 0.3s ease !important;
-  position: absolute;
-  animation: shake 10s;
+  margin-top: 25%;
+  margin-left: 40%;
+  transition: 0.5s ease !important;
+  /* position: absolute; */
+  animation: apply 10s;
   animation-iteration-count: infinite;
+}
+
+@keyframes apply {
+  0% {
+    transform: translate(1px, 20px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-3px, 10px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(4deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(2deg);
+  }
+  90% {
+    transform: translate(1px, 10px) rotate(-3deg);
+  }
+  100% {
+    transform: translate(1px, 20px) rotate(0deg);
+  }
 }
 
 /* --------愛心的部分----------- */
@@ -155,7 +191,7 @@ body {
 
 .activity {
   /* width: 500px; */
-  background:#168fa4;
+  background: #168fa4;
 }
 
 .activity-title {
@@ -345,6 +381,93 @@ input[name="tab_item"] {
 .container-fluid {
   background-image: url(../imgs/member/section-4.svg);
   height: 600px;
+}
+
+/* 推薦商品小卡 */
+.r-section {
+  margin-top: 150px;
+  /* background: url(../imgs/member/section-4.svg); */
+  border: 3px solid black;
+  background-color: #002c80;
+  background-image: radial-gradient(#01173fc2 10%, transparent 10%), radial-gradient(#01173fc2 10%, transparent 10%);
+  background-position: 11px 0, 48px 40px;
+  background-size: 65px 65px;
+  background-attachment: fixed;
+}
+
+.special-category {
+  background-color: #002c80;
+  margin-bottom: 3rem;
+}
+
+.category-count.special {
+  background-color: #ffc024;
+}
+
+.recommened-events {
+  min-height: 40vh;
+}
+
+/* others */
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto 1fr auto;
+
+}
+
+.main {
+  background-color: lighten(skyblue, 60%);
+  grid-area: main;
+  padding: 0;
+  overflow-y: hidden;
+}
+
+.grid-item {
+  padding: 3.5em 1em;
+  font-size: 1em;
+}
+
+.items {
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  white-space: nowrap;
+  transition: all 0.2s;
+  transform: scale(0.98);
+  will-change: transform;
+  user-select: none;
+  cursor: pointer;
+}
+
+.items.active {
+  /* background: rgba(255, 255, 255, 0.3); */
+  cursor: grabbing;
+  cursor: -webkit-grabbing;
+  transform: scale(1);
+}
+
+.item {
+  display: inline-block;
+  min-height: 250px;
+  /* min-width: 400px; */
+  margin: 2em 1em;
+}
+
+/* 推薦區箭頭 */
+.recommend-left {
+  top: 40%;
+  left: 2%;
+  color: #ffc024;
+  font-size: 3rem;
+}
+
+.recommend-right {
+  top: 40%;
+  right: 2%;
+  color: #ffc024;
+  font-size: 3rem;
 }
 
 /* -------Modal----------- */
