--- a/css/1_member-login.css
+++ b/css/1_member-login.css
@@ -197,9 +197,16 @@ label p {
 }
 
 .alert-danger {
-  color: rgb(216, 44, 44);
+  color: #000;
   font-weight: 600;
-  border: 3px solid rgb(36, 24, 146);
+  border: 3px solid rgb(243, 216, 61);
+  background-color: rgb(216, 44, 44);
+}
+
+.alert-success {
+  color: #000;
+  font-weight: 600;
+  border: 3px solid rgb(10, 116, 66);
   background-color: rgb(243, 216, 61);
 }
 
