--- a/css/2_member-accunt-set.css
+++ b/css/2_member-accunt-set.css
@@ -18,7 +18,7 @@ body {
 }
 
 .account-set {
-  margin-top: 12rem;
+  margin-top: 10rem;
   height: 100vx;
   background: #fff;
   background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
@@ -30,6 +30,7 @@ body {
 
 .list-title {
   font-size: 1.2rem;
+  color: #000;
   font-weight: 600;
   text-align: center;
   font-family: NotoSansTC-Regular, Roboto;
@@ -53,7 +54,7 @@ body {
   position: absolute;
   background-color: #fff;
   top: 161px;
-  right: 210px;
+  right: 390px;
 }
 
 /* 區塊標題 */
