--- a/css/4_product-detail.css
+++ b/css/4_product-detail.css
@@ -29,6 +29,15 @@ body {
   height: 87px;
 }
 
+a {
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color: black;
+}
+
 /* ------------麵包屑------------- */
 
 .breadcrumb {
@@ -284,6 +293,10 @@ input {
   margin: auto 20px auto;
 }
 
+.inputbox .text {
+  color: #000000;
+}
+
 .search-bar-ser {
   width: 150px;
   /* height: 100px; */
@@ -380,7 +393,7 @@ input[name="tab_item"] {
 
 .container-fluid {
   background-image: url(../imgs/member/section-4.svg);
-  height: 600px;
+  height: 700px;
 }
 
 /* 推薦商品小卡 */
@@ -459,14 +472,14 @@ input[name="tab_item"] {
 .recommend-left {
   top: 40%;
   left: 2%;
-  color: #ffc024;
+  color: #168fa4;
   font-size: 3rem;
 }
 
 .recommend-right {
   top: 40%;
   right: 2%;
-  color: #ffc024;
+  color: #168fa4;
   font-size: 3rem;
 }
 
@@ -497,6 +510,110 @@ input[name="tab_item"] {
   border-radius: 0%;
   background-color: #168fa4;
   border: 3px solid black;
+}
+
+/* 活動小卡圖片 */
+.event-card .img-wrap {
+  /* height: 300px; */
+  border: 3px solid black;
+}
+
+.fas.fa-cart-plus {
+  font-size: 1.5rem;
+  color: white;
+
+}
+
+/* 翻轉卡片 */
+.flip-card-inner {
+  height: 300px;
+  transition: 0.8s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card:hover .time {
+  opacity: 0;
+}
+
+.flip-card-front,
+.flip-card-back {
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+  background-color: #168fa4;
+  border: 3px solid black;
+  line-height: 1.5;
+}
+
+.flip-card-back .filp-title {
+  font-weight: 600;
+  background-color: #4336a3;
+  color: white;
+}
+
+.flip-card-back p {
+  height: 70%;
+  overflow: hidden;
+}
+
+.img-wrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.event-card .time {
+  bottom: 0;
+  background-color: #ffc024;
+  /* height: 50px; */
+  border-radius: 3px;
+  transition: 0.8s;
+}
+
+.card-body {
+  border: 3px solid black;
+  background-color: white;
+  box-shadow: 6px 6px black;
+  color: black;
+}
+
+.card-body .card-price {
+  background-color: #4336a3;
+  color: white;
+  cursor: pointer;
+}
+
+.event-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.event-location {
+  color: #777;
+}
+
+.like-link {
+  bottom: 10px;
+  right: 14px;
+  font-size: 2rem;
+}
+
+.like.liked {
+  color: #ed5b4c;
+  font-weight: 900;
 }
 
 /* ====== Ｍedia Query ============= */
