updated edit-Event ,  event-manage

--- a/css/3_B2B-Create-Event.css
+++ b/css/3_B2B-Create-Event.css
@@ -294,6 +294,10 @@ input[type="number"] {
     font-size: 16px;
   }
 
+  .autoInput {
+    display: none;
+  }
+
   .eventimg {
     display: none;
   }
