--- a/css/00_navbar.css
+++ b/css/00_navbar.css
@@ -69,9 +69,11 @@ input:focus {
 
 .dropdown-menu {
   background-color: transparent;
+  border: none;
 }
 
 .dropdown-item {
+  max-width: 170px;
   float: none;
   color: black;
   font-size: 16px;
