--- a/css/3_B2B-event-manage.css
+++ b/css/3_B2B-event-manage.css
@@ -139,6 +139,15 @@ table {
   display: flex;
 }
 
+.tr2 .img-wrap {
+  height: 40px;
+}
+
+.tr2 .img-wrap img {
+  width: 100%;
+  height: 100%;
+}
+
 .modify3 {
   width: 100px;
   height: 50px;
