--- a/css/3_B2B-member-profile.css
+++ b/css/3_B2B-member-profile.css
@@ -98,7 +98,7 @@ body {
 }
 
 .picture {
-  margin: 50px auto 0;
+  margin: 30px auto 0;
   width: 230px;
   height: 230px;
   border-radius: 50%;
@@ -121,7 +121,7 @@ body {
 }
 
 .introduction {
-  margin-top: 40px;
+  margin-top: 60px;
   text-align: center;
   font-size: 16px;
   font-weight: 700;
@@ -141,7 +141,7 @@ body {
 .time {
   height: 25px;
   margin: 40px auto 0;
-  justify-content: flex-end;
+  justify-content: center;
   /* text-align: center; */
 }
 
