--- a/css/4_product-detail.css
+++ b/css/4_product-detail.css
@@ -25,6 +25,10 @@ body {
   box-shadow: none; ! important
 } */
 
+.hero-section {
+  padding-left: 15px;
+  padding-right: 15px;
+}
 .space {
   height: 87px;
 }
@@ -58,13 +62,11 @@ a:hover {
   color: black;
 }
 
+
 .mainact {
-  /* height: 465px; */
-  border: 3px solid black;
-  /* background-image: url(../imgs/index/mainact-02.jpg); */
-  /* background-size: cover; */
+  height: 500px;
+  border: 4px solid black;
   background-position: right;
-  height: 99%;
   transition: 0.3s;
 }
 
@@ -74,8 +76,8 @@ a:hover {
 
 .mainact img {
   width: 100%;
-  /* height: 100%; */
-  object-fit: contain;
+  height: 100%;
+  object-fit: cover;
 }
 
 .date {
