--- a/css/2_member-accunt-set.css
+++ b/css/2_member-accunt-set.css
@@ -78,9 +78,10 @@ body {
   width: 230px;
   height: 230px;
   border-radius: 50%;
-  background-image: url(../imgs/b2b/people.png);
+  background: url(../imgs/member_imgs/member_14.jpg) center center no-repeat;
   background-color: #f1f9ff;
   border: 3px solid #000;
+  background-size:cover;
   position: relative;
 }
 
