更改活動管理

--- a/css/3_B2B-event-manage.css
+++ b/css/3_B2B-event-manage.css
@@ -2,6 +2,12 @@
   outline: 1px solid red;
 } */
 
+a {
+  color: black;
+  text-decoration: underline;
+  line-height: 1.2;
+}
+
 button:focus {
   box-shadow: none !important;
 }
