--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -91,7 +91,7 @@ body {
 table {
   margin-top: 60px;
   width: 100%;
-  height: 750px;
+  height: 550px;
 }
 
 .tr {
@@ -119,6 +119,7 @@ table {
   width: 100px;
   height: 50px;
   margin-left: 10px;
+  color: #fff;
   background-color: #168fa4;
   border: 3px solid #000;
   border-radius: 0;
